# hapi-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  array_attr_hython.py  attr_dyn.rs  build.rs  env.ps1  env.sh  justfile  run_codegen.sh  rustfmt.toml  wrapper.h
.cargo/: config
.cursor/rules/: engine-docs.mdc
.github/workflows/: ci.yml
apps/bevy/: Cargo.toml  README.md
apps/bevy/assets/hda/: geo.hda
apps/bevy/src/: geometry.rs  houdini_mesh.rs  main.rs  material.rs
apps/render_cop/: Cargo.toml  README.md  cop_render.hda
apps/render_cop/src/: main.rs
apps/viewport/: Cargo.toml  env_19.0.ps1
apps/viewport/otls/: hapi_cube.hda  hapi_opengl.hda  simulation.hda
apps/viewport/src/: camera.rs  cube.frag  cube.vert  hapi.rs  hapi_geo.rs  main.rs  ogl.rs  parameters.rs  setup.rs  shader.frag  shader.geom  shader.vert  utils.rs
apps/viewport/src/glsl/: shader.frag  shader.geom  shader.vert
async_test/: Cargo.toml
async_test/src/: main.rs
benchmarks/server/: Cargo.toml  benchmark.hda
benchmarks/shared-memory/: Cargo.toml  benchmark.hda
bindgen/coverage/: Cargo.toml
bindgen/hapi-bindgen/: Cargo.toml  wrapper.h
bindgen_ext/: Cargo.toml  codegen.toml
bindgen_ext/src/: config.rs  enums.rs  example.rs  f.rs  main.rs  parse.rs  simple.rs
client/: client.py  one_off.py  run_one_off.py
codegen/: Cargo.toml  codegen.toml
codegen/src/: auto.rs  bindgen.rs  bitflags.rs  config.rs  enums.rs  example.rs  ext.rs  extra.rs  helpers.rs  main.rs  parse.rs  simple.rs  structs.rs
cpp/: CMakeLists.txt
cpp/examples/: connecting_assets.cpp  curve_marshall.cpp  curve_output.cpp  geometry_marshall.cpp  geometry_point_cloud.cpp  groups.cpp  materials.cpp  node_networks.cpp  nurbs_curve.cpp  objects_geos_parts.cpp  packed_primitives.cpp  parameters.cpp  pdg_cook.cpp  pdg_cook_events.cpp  pdg_create_top_graph.cpp
cpp/segfault/: CMakeLists.txt  build.sh  simple.cpp
cpp/simple/: simple.cpp
dev/: Cargo.toml  build.rs
dev/src/: dev_1.rs  dev_2.rs  dev_3.rs  dev_4.rs  main.rs  one_off.rs  simple.rs  static_session.rs
examples/: connecting_assets.rs  cook_pdg.rs  create_pdg_network.rs  curve_marshall.rs  curve_output.rs  default_parm_values.rs  groups.rs  live_session.rs  materials.rs  node_errors.rs  node_networks.rs  object_geos_parts.rs  packed_primitives.rs  parameters.rs  pdg_example1.rs  pdg_example2.rs  run_python.rs
examples/otls/: curve_marshall.hip  geometry_marshall.hip  geometry_point_cloud.hip  groups.hip  modifiedScene.hip  nurbs_curve.hda  top_sphere_mountain.hda
examples/source/: geometry_marshall.cpp  geometry_point_cloud.cpp  groups.cpp  objects_geos_parts.cpp  packed_primitives.cpp  pdg_cook.cpp  pdg_cook_events.cpp
fltk-gui/: Cargo.toml
fltk-gui/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs  main2.rs  main3.rs
hapi-rs/: Cargo.toml  build.rs
hapi-rs/examples/: connecting_assets.rs  curve_marshall.rs  curve_output.rs  fltk_gui.rs  groups.rs  materials.rs  node_networks.rs  object_geos_parts.rs  packed_primitives.rs  parameters.rs
hapi-rs/src/: _docs.rs  asset.rs  attribute.rs  auto.rs  cookoptions.rs  design.rs  errors.rs  fixes.rs  geometry.rs  lib.rs  macros.rs  material.rs  node.rs  parameter.rs  session.rs  stringhandle.rs
hapi-rs/src/_prev/: lib.rs  session.rs  structs.rs
hapi-rs/src/attribute/: array.rs  attribute.rs  bindings.rs  info.rs  mod.rs
hapi-rs/src/ffi/: bindings.rs  extensions.rs  functions.rs  mod.rs  structs.rs
hapi-rs/src/node/: info.rs  node.rs
hapi-rs/src/parameter/: parameter.rs  traits.rs  values.rs
hapi-rs/src/session/: cookoptions.rs  extra.rs  session.rs
hapi-rs/src/tests/: mod.rs
hapi-rs/src/volume/: mod.rs  volume.rs
hapi-server/: Cargo.toml
hapi-server/src/: hars.rs  main.rs
hapi-sys/: Cargo.toml  build.rs  build_ext.rs
hapi-sys/src/: lib.rs
hapi-viewport/: Cargo.toml
hapi-viewport/src/: main.rs
hapi_test/: CMakeLists.txt  build.sh  simple.cpp
hython/: async_attr.py  dictionary_attribute.py  issue_array_attr.py  issue_presets.py  node_composed_error.py  parameters.py  set_dictionary_array_attribute.py  shared_memory.py  simple_hars_session.py
lib/: Cargo.toml  README.md  build.rs
lib/examples/: connecting_assets.rs  cook_pdg.rs  create_pdg_network.rs  curve_marshall.rs  curve_output.rs  groups.rs  hip_loading.rs  live_session.rs  materials.rs  node_errors.rs  node_networks.rs  object_geos_parts.rs  packed_primitives.rs  parameters.rs  run_python.rs  setup_server.rs  tmp.rs
lib/src/: asset.rs  cop.rs  errors.rs  geometry.rs  lib.rs  material.rs  node.rs  pdg.rs  server.rs  session.rs  stringhandle.rs  utils.rs  volume.rs
lib/src/attribute/: array.rs  async_.rs  mod.rs
lib/src/attribute/bindings/: numeric.rs  string.rs
lib/src/ffi/: bindings.rs  functions.rs  structs.rs
lib/src/parameter/: access.rs  base.rs  mod.rs
lib/tests/: asset.rs  attribute_async.rs  attributes.rs  geometry.rs  material.rs  node.rs  parameters.rs  pdg.rs  session.rs  utils.rs
otls/: FourShapes.hda  connecting_assets.hip  cook_err_fatal.hda  groups.hip  hapi_errors.hda  hapi_geo.hda  hapi_parms.hda  hapi_pdg.hda  hapi_script.hda  hapi_vol.hda  nurbs_curve.hip  pdg_examples.hda  run_script.hda  sleeper.hda
otls/sesi/: MultiParameter_UI_Test.hda  PackedPrimitive.hda  SideFX__TrackBuilder.otl  SideFX__scott_spookytable.otl  he_boolean.hda  he_calculate_occlusion.hda  he_curve_instancer.hda  he_delete_small_parts.hda  he_polyreduce.hda  he_set_pivot.hda  he_surface_instancer.hda
simple/: CMakeLists.txt  build.sh  simple.cpp
src/: asset.rs  cookoptions.rs  errors.rs  extentions.rs  geometry.rs  lib.rs  material.rs  node.rs  parameter.rs  pdg.rs  session.rs  status.rs  stringhandle.rs  utils.rs  volume.rs
src/attribute/: array.rs  async_.rs  attribute.rs  bindings.rs  mod.rs
src/dev/: junk.rs  simple.rs
src/ffi/: bindings.rs  functions.rs  mod.rs  structs.rs
src/parameter/: access.rs  base.rs  mod.rs  tests.rs
src/volume/: mod.rs  volume.rs
tests/: asset.rs  attributes.rs  geometry.rs  material.rs  node.rs  parameters.rs  pdg.rs  session.rs
(+8 files in other folders)
