[package]
name = "hapi-rs"
description = "Rust bindings to Houdini Engine API"
documentation = "https://docs.rs/hapi-rs"
repository = "https://github.com/alexxbb/hapi-rs/"
keywords = ["vfx", "graphics", "gamedev", "houdini"]
categories = ["graphics", "game-development"]
readme = "README.md"
version = "0.9.0"
authors = ["Aleksei Rusev <hou.alexx@gmail.com>"]
edition = "2021"
license = "MIT"
exclude = [
    "otls/*",
]

[dependencies]
log = "0.4.14"
paste = "1.0.6"
#parking_lot = "0.12.1"
duplicate = { version = "0.4.1", features = [], default-features = false }
debug-ignore = "1.0.5"
tempfile = "3.3.0"

[dev-dependencies]
once_cell = "1.5.2"
env_logger = "0.10.0"
prettytable-rs = "0.10.0"
fastrand = "1.6.0"
anyhow = "1.0.66"
argh = "0.1.9"
ctrlc = "3.2.5"
