[package]
name = "hapi-rs"
description = "Rust bindings to Houdini Engine API"
documentation = "https://docs.rs/hapi-rs"
repository = "https://github.com/alexxbb/hapi-rs/"
keywords = ["vfx", "graphics", "gamedev", "houdini"]
categories = ["graphics", "game-development"]
readme = "README.md"
version = "0.11.2"
authors = ["Aleksei Rusev <hou.alexx@gmail.com>"]
edition = "2021"
license = "MIT"
include = ["/src", "build.rs", "LICENSE"]

[dependencies]
log = "0.4.22"
paste = "1.0.15"
parking_lot = "0.12.3"
duplicate = { version = "2.0.0", features = [], default-features = false }
debug-ignore = "1.0.5"
tempfile = "3.13.0"

[dev-dependencies]
once_cell = "1.20.2"
env_logger = "0.11.5"
prettytable-rs = "0.10.0"
fastrand = "2.1.1"
anyhow = "1.0.91"
argh = "0.1.12"
ctrlc = "3.4.5"
tinyjson = "2.5.1"
