[package]
name = "bindgen_ext"
version = "0.1.0"
authors = ["Alex Rusev <hou.alexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.48", features = ["full", "extra-traits"]}
quote = "1.0.7"
proc-macro2 = "1.0.24"
heck = "0.3.1"
once_cell = "1.4.1"
