[package]
name = "codegen"
version = "0.1.0"
authors = ["Alex Rusev <hou.alexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "dev"
path = "src/dev/dev.rs"

[dependencies]
syn = {version = "1.0.48", features = ["full", "extra-traits"]}
quote = "1.0.7"
proc-macro2 = "1.0.24"
heck = "0.3.1"
once_cell = "1.4.1"
toml = "0.5.7"
serde = {version = "1.0.117", features = ["serde_derive"]}
log = "0.4.11"
pretty_env_logger = "0.4.0"
bindgen = "0.55.1"
getopts = "0.2.21"
anyhow = "1.0.34"