[package]
name = "dev"
version = "0.1.0"
authors = ["Alex Rusev <hou.alexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hapi-rs = {path = "../hapi-rs", features = [] }
smol = "1.2.4"
once_cell = "1.5.2"
