[package]
name = "dev"
version = "0.1.0"
authors = ["Alex Rusev <hou.alexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "one_off"
path = "src/one_off.rs"

[dependencies]
hapi-rs = {path = "../hapi-rs"}
env_logger = {version = "0.8.2", features = ["termcolor", "humantime"]}
