[package]
name = "hapi-rs"
description = "Rust bindings to Houdini Engine API"
documentation = "https://docs.rs/hapi-rs"
repository = "https://github.com/alexxbb/hapi-rs/"
readme = "README.md"
version = "0.1.0"
authors = ["Alex Rusev <hou.alexx@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
paste = "1.0"

[dev-dependencies]
parking_lot = "0.11.2"
once_cell = "1.5.2"
env_logger = "0.8.2"
prettytable-rs = "0.8.0"
fltk = {version = "~1.2.16", features = ["fltk-bundled"]}