[package]
name = "hapi-server"
version = "0.1.0"
authors = ["alexxbb <hou.alexx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
env_logger = "0.8.3"
log = "0.4"
#serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.3", features = ["small_rng"] }
#hapi-rs = {path="../hapi-rs"}
