[package]
name = "hapi-sys"
version = "0.1.0"
authors = ["Alex Rusev <hou.alexx@gmail.com>"]
edition = "2018"

[lib]
# bindgen generates rust docstrings for C code which breaks `cargo test`
doctest = false

[[bin]]
name = "ext"
path = "build_ext.rs"

[build-dependencies]
bindgen = "0.55.1"
syn = "1.0.48"
proc-macro2 = "1.0.24"
