[package]
name = "hapi-rs"
description = "Rust bindings to Houdini Engine API"
documentation = "https://docs.rs/hapi-rs"
repository = "https://github.com/alexxbb/hapi-rs/"
keywords = ["vfx", "graphics", "gamedev", "houdini"]
categories = [
    "graphics",
    "game-development",
    "rendering",
    "simulation",
    "procedural-generation",
]
readme = "README.md"
version = "0.21.0"
authors = ["Aleksei Rusev <hou.alexx@gmail.com>"]
edition = "2024"
license = "MIT"
include = ["/src", "build.rs", "LICENSE"]

[dependencies]
log = "0.4.28"
pastey = "*"
parking_lot = "0.12.5"
duplicate = { version = "2.0.0", features = [], default-features = false }
debug-ignore = "1.0.5"
tempfile = "3.23.0"

[dev-dependencies]
once_cell = "1.21.3"
env_logger = "0.11.8"
prettytable-rs = "0.10.0"
fastrand = "2.3.0"
anyhow = "1.0.100"
argh = "0.1.13"
ctrlc = "3.5.0"
tinyjson = "2.5.1"
