[package]
name = "viewport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hapi-rs = { path="../.." }
eframe = "0.21.3"
egui_glow = "0.21.0"
glow = "0.12.1"
ultraviolet = {version = "0.9.0", features=["bytemuck"]}
bytemuck = "1.13.1"
png = "0.17.7"
path-absolutize = "3.0.14"


[[bin]]
name = "viewport"
path = "src/main.rs"


[[bin]]
name = "hapi-geo"
path = "src/hapi.rs"