[package]
name = "viewport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hapi-rs = { path="../../lib" }
eframe = "0.26.2"
egui_glow = "0.26.2"
glow = { version = "0.13.1", features = ["debug_automatic_glGetError"] }
ultraviolet = {version = "0.9.0", features=["bytemuck"]}
bytemuck = "1.13.1"
path-absolutize = "3.0.14"
env_logger = "0.11.3"
image = {version = "0.25.0", features = ["png"]}